k8/sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secrets-synchronizer
  labels:
    app: secrets-synchronizer
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: secrets-synchronizer
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: secrets-synchronizer
    spec:
      containers:
      - args:
        - infinity
        command:
        - sleep
        image: docker.io/library/alpine:3.12.1
        name: secrets-synchronizer
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - mountPath: /mnt/secrets-store
          name: secrets-store-inline
          readOnly: true
      nodeSelector:
        kubernetes.io/os: linux
      restartPolicy: Always
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: chatbot-secrets-provider
        name: secrets-store-inline
