k8/claim.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claim
  labels:
    app: claim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: claim
  template:
    metadata:
      labels:
        app: claim
    spec:
      containers:
        - name: claim
          image: claim
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: claim
spec:
  type: ClusterIP
  selector:
    app: claim
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
