k8/fiber.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiber
  labels:
    app: fiber
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiber
  template:
    metadata:
      labels:
        app: fiber
    spec:
      containers:
        - name: fiber
          image: fiber
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: fiber
spec:
  type: ClusterIP
  selector:
    app: fiber
  ports:
    - protocol: TCP
      port: 8002
      targetPort: 8002
