k8/hr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hr
  labels:
    app: hr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hr
  template:
    metadata:
      labels:
        app: hr
    spec:
      containers:
        - name: hr
          image: hr
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: hr
spec:
  type: ClusterIP
  selector:
    app: hr
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
