k8/motor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: motor
  labels:
    app: motor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: motor
  template:
    metadata:
      labels:
        app: motor
    spec:
      containers:
        - name: motor
          image: motor
          ports:
            - containerPort: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: motor
spec:
  type: ClusterIP
  selector:
    app: motor
  ports:
    - protocol: TCP
      port: 8003
      targetPort: 8003
